@@ -9,9 +9,8 @@ import uk.gov.hmcts.divorce.bulkaction.service.CaseTriggerService.TriggerResult;
 import uk.gov.hmcts.divorce.divorcecase.task.CaseTask;
 import uk.gov.hmcts.divorce.idam.User;
 
+import java.util.ArrayList;
 import java.util.List;
-
-import static java.util.stream.Collectors.toList;
 
 @Service
 @Slf4j
@@ -28,10 +27,12 @@ public class BulkTriggerService {
 
         log.info("Processing bulk list case details for Event ID: {}", eventId);
 
-        return bulkListCaseDetails.parallelStream()
-            .map(listValueCaseDetails -> caseTriggerService.caseTrigger(listValueCaseDetails, eventId, caseTask, user, serviceAuth))
-            .filter(triggerResult -> !triggerResult.isProcessed())
-            .map(TriggerResult::getListValueBulkListCaseDetails)
-            .collect(toList());
+        return new ArrayList<>(
+            bulkListCaseDetails.parallelStream()
+                .map(listValueCaseDetails -> caseTriggerService.caseTrigger(listValueCaseDetails, eventId, caseTask, user, serviceAuth))
+                .filter(triggerResult -> !triggerResult.isProcessed())
+                .map(TriggerResult::getListValueBulkListCaseDetails)
+                .toList()
+        );
     }
 }
